Please view this file on the master branch, on stable branches it's out of date.

v 8.13.0 (unreleased)
  - Use gitlab-shell v3.6.2 (GIT TRACE logging)
  - AbstractReferenceFilter caches project_refs on RequestStore when active
  - Speed-up group milestones show page
  - Log LDAP lookup errors and don't swallow unrelated exceptions. !6103 (Markus Koller)
  - Add more tests for calendar contribution (ClemMakesApps)
  - Avoid database queries on Banzai::ReferenceParser::BaseParser for nodes without references
  - Fix permission for setting an issue's due date
  - Expose expires_at field when sharing project on API
  - Allow the Koding integration to be configured through the API
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Revoke button in Applications Settings underlines on hover.
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Fix broken repository 500 errors in project list
  - Close todos when accepting merge requests via the API !6486 (tonygambone)

v 8.12.4 (unreleased)

v 8.12.3
  - Update Gitlab Shell to support low IO priority for storage moves

v 8.12.2 (unreleased)