@@ -112,10 +112,14 @@ header {
     .header-logo {
       position: absolute;
       left: 50%;
-      margin-left: -18px;
       top: 7px;
       transition-duration: .3s;
       z-index: 999;
+
+      #logo {
+        position: relative;
+        left: -50%;
+      }
 
       svg, img {
         height: 36px;
